# vector-to-mesh-uv

./: .gitignore  Cargo.toml  README.md  UvDump.py  vertex_uvs
src/: lib.rs  main.rs  vector.rs
src/bezier_utils/: Cargo.toml
src/bezier_utils/src/: lib.rs
src/util/: mod.rs
